<resources>
    <string name="app_name">viewBindingPractice</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--New -->
    <string name="pet_name_hint">Charlie</string>
    <string name="submit">Submit</string>
    <string name="owner_hint">Mike</string>
    <string name="pet_name">Pet Name:</string>
    <string name="owner_name">Owner Name:</string>
    <string name="required">Required</string>
    <string name="owner_is">Owner Is:</string>
    <string name="back">Back</string>
    <string name="vaccinated">Vaccinated:</string>

</resources>